Version 2.03.24 - 
==================
  Add configure --with-modulesdir to select kernel modules directory.
  Support creation of thin-pool with VDO use for its data volume.

Version 2.03.23 - 21st November 2023
====================================
  Set the first lv_attr flag for raid integrity images to i or I.
  Add -A option for pvs and pvscan to show PVs outside devices file.
  Improve searched_devnames temp file usage to prevent redundant scanning.
  Change default search_for_devnames from auto to all.
  Add lvmdevices --refresh to search for missing PVIDs on all devices.
  Add comparison between old and new entries in lvmdevices --check.
  Fix device_id matching order - match non-devname first.
  Fix "lvconvert -m 0" when there is other than first in-sync leg.
  Use system.devices as default for dmeventd when dmeventd.devices is undefined.
  Accept WWIDs containing QEMU HARDDISK for device_id.
  Improve handling of non-standard WWID prefixes used for device_id.
  Configure automatically enables cmdlib for dmeventd and notify-dbus for dbus.
  Fix hint calculation for pools with zero or error segment.
  Configure supports --disable-shared to build only static binaries.
  Configure supports --without-{blkid|systemd|udev} for easier static build.
  Refresh device ids if the system changes.
  Fix pvmove when specifying raid components as moved LVs.
  Enhance error detection for lvm_import_vdo.
  Support PV lists with thin lvconvert.
  Fix support for lvm_import_vdo with SCSI VDO volumes.
  Fix locking issue leading to hanging concurrent vgchange --refresh.
  Recognize lvm.conf report/headings=2 for full column names in report headings.
  Add --headings none|abbrev|full cmd line option to set report headings type.
  Fix conversion to thin pool using lvmlockd.
  Fix conversion from thick into thin volume using lvmlockd.
  Require writable LV for conversion to vdo pool.
  Fix return value from lvconvert integrity remove.
  Preserve UUID for pool metadata spare.